Fixed cross-icon getting hidden behind messages in personal info-dialog

--- a/dev/scss/components/_icon.scss
+++ b/dev/scss/components/_icon.scss
@@ -4,6 +4,7 @@
   &-cross {
     height: 24px;
     width: 28px;
+    z-index: $zindex-cross;
 
     & span {
       display: block;
