--- a/dev/scss/utils/_zindexes.scss
+++ b/dev/scss/utils/_zindexes.scss
@@ -1,3 +1,4 @@
+$zindex-cross: 1015;
 $zindex-message: 1010;
 $zindex-dialog: 1005;
 $zindex-burger: 1002;
